[gd_scene load_steps=8 format=3 uid="uid://cjaf30ohu3nqq"]

[ext_resource type="Script" path="res://graph_edit.gd" id="1_nsxrj"]
[ext_resource type="Script" path="res://TitleBar.gd" id="3_2wqex"]
[ext_resource type="PackedScene" uid="uid://0abfv2n2a0ma" path="res://Characters.tscn" id="4_7xxva"]
[ext_resource type="PackedScene" uid="uid://b3is2c3ad72tg" path="res://character_line.tscn" id="5_8shvh"]
[ext_resource type="PackedScene" uid="uid://f8r18060uj8l" path="res://WritingPanel.tscn" id="5_vcs5m"]
[ext_resource type="PackedScene" uid="uid://cewlefdinvu0c" path="res://WritingWindow.tscn" id="6_eimfy"]

[sub_resource type="Theme" id="Theme_xtqv5"]
SplitContainer/constants/autohide = 0

[node name="VBoxContainer" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_xtqv5")
script = ExtResource("1_nsxrj")

[node name="TitleBar" type="Control" parent="."]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
script = ExtResource("3_2wqex")

[node name="HBoxContainer" type="HBoxContainer" parent="TitleBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuButton" type="MenuButton" parent="TitleBar/HBoxContainer"]
layout_mode = 2
text = "File"
item_count = 7
popup/item_0/text = "Save"
popup/item_0/id = 0
popup/item_1/text = "New"
popup/item_1/id = 5
popup/item_2/text = "Open"
popup/item_2/id = 4
popup/item_3/text = "Save As"
popup/item_3/id = 1
popup/item_4/text = "Export as .txt"
popup/item_4/id = 6
popup/item_5/text = "Save and Quit"
popup/item_5/id = 2
popup/item_6/text = "Quit Without Saving"
popup/item_6/id = 3

[node name="SettingsButton" type="Button" parent="TitleBar/HBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="AddScene" type="Button" parent="TitleBar/HBoxContainer"]
layout_mode = 2
text = "Add Scene"

[node name="Characters" type="Button" parent="TitleBar/HBoxContainer"]
layout_mode = 2
text = "Characters
"

[node name="Window" parent="TitleBar/HBoxContainer/Characters" instance=ExtResource("4_7xxva")]
visible = false
CharLine = ExtResource("5_8shvh")

[node name="WordCount" type="Label" parent="TitleBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Word Count: "

[node name="GoalLabel" type="Label" parent="TitleBar/HBoxContainer"]
layout_mode = 2
text = "Goal"

[node name="EditGoal" type="LineEdit" parent="TitleBar/HBoxContainer"]
layout_mode = 2
placeholder_text = "0"

[node name="TodayCount" type="Label" parent="TitleBar/HBoxContainer"]
layout_mode = 2
text = "Today's Word Count: "

[node name="ClearDebug" type="Button" parent="TitleBar/HBoxContainer"]
visible = false
self_modulate = Color(0.819608, 0, 0.329412, 1)
layout_mode = 2
text = "Clear Path"

[node name="OpenFile" type="FileDialog" parent="TitleBar"]
title = "Open a File"
initial_position = 1
size = Vector2i(500, 500)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.tres")

[node name="SaveFile" type="FileDialog" parent="TitleBar"]
initial_position = 1
size = Vector2i(500, 500)
ok_button_text = "Save"
access = 2
filters = PackedStringArray("*.tres")

[node name="SaveNamePopup" type="Popup" parent="TitleBar"]
title = "Notice"
initial_position = 1
size = Vector2i(226, 100)

[node name="Label" type="Label" parent="TitleBar/SaveNamePopup"]
offset_right = 40.0
offset_bottom = 23.0
text = "Please set your new filename"

[node name="OK" type="Button" parent="TitleBar/SaveNamePopup"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -15.5
offset_top = -31.0
offset_right = 15.5
grow_horizontal = 2
grow_vertical = 0
text = "OK"

[node name="SavedNotifyPanel" type="Panel" parent="TitleBar"]
visible = false
self_modulate = Color(0, 1, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="TitleBar/SavedNotifyPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Saved!"
horizontal_alignment = 1

[node name="ExportFileDialog" type="FileDialog" parent="TitleBar"]
title = "Export the Project"
initial_position = 4
size = Vector2i(784, 624)
access = 2
filters = PackedStringArray("*.txt")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="List" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
text = "GetConnectionList"

[node name="Save" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
text = "Save"

[node name="Load" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
text = "Load"

[node name="SelectAll" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
text = "SelectAll
"

[node name="SplitContainer" type="SplitContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="ChapterScroll" type="ScrollContainer" parent="SplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ChapterSection" type="BoxContainer" parent="SplitContainer/ChapterScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
vertical = true

[node name="HBoxContainer" type="HBoxContainer" parent="SplitContainer/ChapterScroll/ChapterSection"]
layout_mode = 2

[node name="AddChapterTop" type="Button" parent="SplitContainer/ChapterScroll/ChapterSection"]
layout_mode = 2
size_flags_horizontal = 0
text = "+ Chapter"

[node name="ChapterContainer" type="BoxContainer" parent="SplitContainer/ChapterScroll/ChapterSection"]
layout_mode = 2
vertical = true

[node name="AddChapterBottom" type="Button" parent="SplitContainer/ChapterScroll/ChapterSection"]
layout_mode = 2
size_flags_horizontal = 0
text = "+ Chapter"

[node name="GraphEdit" type="GraphEdit" parent="SplitContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
right_disconnects = true

[node name="WritingPanel" parent="SplitContainer" instance=ExtResource("5_vcs5m")]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 3
type = null

[node name="WritingWindow" parent="." instance=ExtResource("6_eimfy")]
unique_name_in_owner = true
visible = false

[connection signal="gui_input" from="TitleBar" to="TitleBar" method="_onTitleBar_gui_input"]
[connection signal="open_file" from="TitleBar" to="." method="_on_title_bar_open_file"]
[connection signal="quit_no_save" from="TitleBar" to="TitleBar" method="_on_close_button_down"]
[connection signal="save" from="TitleBar" to="." method="_on_save_button_down"]
[connection signal="save_and_quit" from="TitleBar" to="." method="_on_title_bar_save_and_quit"]
[connection signal="save_as" from="TitleBar" to="TitleBar/SaveFile" method="show"]
[connection signal="button_down" from="TitleBar/HBoxContainer/MenuButton" to="TitleBar" method="_on_menu_button_button_down"]
[connection signal="button_down" from="TitleBar/HBoxContainer/SettingsButton" to="TitleBar" method="_on_settings_button_down"]
[connection signal="button_down" from="TitleBar/HBoxContainer/AddScene" to="." method="_on_button_button_down"]
[connection signal="button_down" from="TitleBar/HBoxContainer/Characters" to="TitleBar/HBoxContainer/Characters/Window" method="show"]
[connection signal="text_changed" from="TitleBar/HBoxContainer/EditGoal" to="." method="_on_edit_goal_text_changed"]
[connection signal="button_down" from="TitleBar/HBoxContainer/ClearDebug" to="TitleBar" method="_on_clear_debug_button_down"]
[connection signal="file_selected" from="TitleBar/OpenFile" to="." method="_on_open_file_file_selected"]
[connection signal="file_selected" from="TitleBar/SaveFile" to="." method="_on_save_file_file_selected"]
[connection signal="popup_hide" from="TitleBar/SaveNamePopup" to="TitleBar/SaveFile" method="show"]
[connection signal="button_down" from="TitleBar/SaveNamePopup/OK" to="TitleBar/SaveFile" method="show"]
[connection signal="button_down" from="TitleBar/SaveNamePopup/OK" to="TitleBar/SaveNamePopup" method="hide"]
[connection signal="file_selected" from="TitleBar/ExportFileDialog" to="TitleBar" method="_on_export_file_dialog_file_selected"]
[connection signal="button_down" from="HBoxContainer/List" to="." method="_on_list_button_down"]
[connection signal="button_down" from="HBoxContainer/Save" to="." method="_on_save_button_down"]
[connection signal="button_down" from="HBoxContainer/Load" to="." method="_on_load_button_down"]
[connection signal="button_down" from="HBoxContainer/SelectAll" to="." method="_on_select_all_button_down"]
[connection signal="button_down" from="SplitContainer/ChapterScroll/ChapterSection/AddChapterTop" to="." method="_on_add_chapter_top_button_down"]
[connection signal="button_down" from="SplitContainer/ChapterScroll/ChapterSection/AddChapterBottom" to="." method="_on_add_chapter_bottom_button_down"]
[connection signal="connection_request" from="SplitContainer/GraphEdit" to="." method="_on_graph_edit_connection_request"]
[connection signal="disconnection_request" from="SplitContainer/GraphEdit" to="." method="_on_graph_edit_disconnection_request"]
